--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="name_hint">Name:</string>
     <string name="count_hint">Count:</string>
     <string name="save_btn">Save</string>
+    <string name="add_btn">Add</string>
     <string name="error_input_name">Invalid name</string>
     <string name="error_input_count">Invalid count</string>
 </resources>
